--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,32 @@ main{
 nav{
   padding: 20px 30px;
 }
+.card-list{
+ display: flex;
+ padding: 0px 20px;
+ overflow: scroll;
+}
+
+.title{
+ 
+  /* word-wrap: break-word; */
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.card {
+  width: 175px;
+  font-size: 12px;
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: column; 
+  position: relative 
+  }
+.card-badge {
+  position: absolute;
+  top: 6px;
+  left:6px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: bold;
+}
